<resources>

    <string name="app_name">Mobilography</string>
    <string name="app_menu">Menu</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="Copyright">Copyright© 2020 AboMobilography. All rights reserved.</string>

    <string name="mobilograph">Mobilography</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
