<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/origami" />


    <TextView
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10sp"
        android:text="Login"
        android:textColor="#F9AA33"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/signin_email"
        android:drawableLeft="@drawable/ic_action_user"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginBottom="@dimen/input_margin"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="#fff"
        android:textColorHint="#FAF7F7"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signin_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:layout_marginBottom="@dimen/input_margin"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#FAF7F7"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        app:cardBackgroundColor="#00201717"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        >

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/signin"
            android:background="@drawable/botton_bg"
            android:textColor="#FFFFFF"
           />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginVertical="10sp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="or"
        />


    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18sp"
        android:gravity="center"
        android:text="Register Here."/>


</LinearLayout>